# garbled-delivery

./: .gitignore  Cargo.toml  LICENSE  README.md
article/: garable_delivery.tex  grable_delivery.tex
article/ ru/: grable_delivery_ru.bcf  grable_delivery_ru.tex
src/: alice.rs  bob.rs
src/common/: circuits_patch.rs  garble_setup.rs  mod.rs
